- Fixed rounding issues when zooming
- Fixed playback ending too quickly
- Allowed moving notes by octave with shift+up/down
- Allowed moving notes by one measure with shift+left/right
- G clef is now rendered (roughly) on printed scores
- You can now choose the default view for score editor in preferences
- Fixed repetiton detection on multiple-track printing

1.2b4
- Switched to unified (native) toolbar on mac  (WARNING: requires patching wxWidgets, see docs)
- A few linux changes
- Fixed control editor to allow minimal value (0), namely allowing to turn Sustain off.
- Fixed (yet another) bug in accidental handling
- More intelligently decide if notes on middle C belong to F clef or G clef
- In editor popup menus, don't show score options in keyboard mode
- Fixed docking tracks, which was broken in last release
- Made 'follow playback' easier to follow by scrolling only on measure change
- Fixed undoing guitar tuning changes
- When printing multiple tracks, draw a line between them to make clear they belong toghether
- Fixed silences being drawn in repetitions when printing
- More minot tweaks to printing
- Added ability to maximize tracks
- Improved handling of on/off controllers, namely making sustain usable.
- More layout and rendering improvements to score printing
- Added keyboard shortcuts for more menu elements
- Added built-in docs viewer on mac
- Fixed print dialog to show correct page amount instead of 9999 (WARNING: requires patching wxWidgets, see docs)
- It is now possible to see song length (minutes:seconds) in song info window
- Improved mouse events propagation, so areas are less viral about mouse needing to remain within defined boundaries
- Added track property dialog, where default note volume can be set in addition to background

1.2b3
- Refactored preferences to look better, be cleaner and allow setting a default value for "follow playback"
- Updated render code in hope to fix rounding errors on some graphics card