@@ -37,6 +37,7 @@ namespace AriaRender
         STATE_NORMAL = 99,
         STATE_NO_FOCUS = 0, // to allow setting up an array of modified images, where the the state ID is also the array index
         STATE_DISABLED,
+        STATE_GREY,
         STATE_NOTE,
         STATE_SELECTED_NOTE,
         STATE_UNSELECTED_TAB,
