@@ -13,6 +13,7 @@
 - G clef is now rendered (roughly) on printed scores
 - You can now choose the default view for score editor in preferences
 - Fixed repetiton detection on multiple-track printing
+- Improvements to maximize mode
 
 1.2b4
 - Switched to unified (native) toolbar on mac  (WARNING: requires patching wxWidgets, see docs)
